--- a/Contenu/CSS/style.css
+++ b/Contenu/CSS/style.css
@@ -80,8 +80,32 @@ body {
     width: 70px;
 }
 
-#slider{
+#slideContainer {
     position: relative;
+    display: block;
+    height: 300px;
+}
+
+.mySlides {
+    position: absolute;
+    top: 0;
+    visibility: visible;
+}
+
+#slideContainer:before {
+    display: block;
+    content: "";
+    
+    width: 30%;
+    padding-top: 34%;
+}
+
+#slideContainer > .mySlides {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 #logo {
@@ -210,3 +234,4 @@ footer p {
 .post h1, #ajoutPost h2 {
     margin: 0;
 }
+
