--- a/Contenu/CSS/style.css
+++ b/Contenu/CSS/style.css
@@ -1,16 +1,18 @@
 body {
     margin: 0;
-    font-family: 'Calibri';
+    font-family: 'Montserrat', sans-serif;
+    color: #1b375b;
+    
 }
 
 .centered {
     margin: auto;
-    width: 55%;
+    width: 50%;
 }
 
 #member{
     height: 40px;
-    background-color: #1c1c1c;
+    background-color: #edeef3;
     color: #ffffff;
     text-align: right;
     padding-right: 30px;
@@ -20,7 +22,7 @@ body {
 #member p {
     margin: 0;
     line-height: 2.5em;
-    font-family: 'Abel';
+    font-family: 'Roboto Condensed', sans-serif;
     font-weight: bold;
 }
 
@@ -28,16 +30,14 @@ body {
     margin-top: 40px;
 }
 
-#title, #underTitle {
-    font-family: 'Caveat', cursive;
-    font-size: 2.3em;
+#title {
+    font-family: 'Marck Script', cursive;
+    font-size: 2.8em;
     color: #457187;
     text-align: center;
 }
 
-#title {
-    text-transform: uppercase;
-}
+
 
 #menu {
     margin: auto;
@@ -50,9 +50,23 @@ body {
 }
 
 #menu li{
-    display: inline;
-    list-style-type: none;
+    display: inline-block;
     
+    list-style-type: none; 
+}
+
+#menu li:hover {
+    background-color: #457187;
+    color: #ffffff;
+}
+
+.menuItem li:hover {
+    background-color: #457187;
+    color: #ffffff;
+}
+
+#menu li a:hover {
+    color: #ffffff;
 }
 
 #menu li a{
@@ -62,15 +76,12 @@ body {
     margin-top: 10px;
     margin-bottom: 10px;
     text-decoration: none;
-    color: #4d4d4d;
+    color: #457187;
     text-transform: uppercase;
-    font-family: 'Calibri';
     font-weight: bold;
 }
 
-#menu li a:hover {
-    color: #457187;
-}
+
 
 .separator {
     margin-left: auto;
@@ -124,14 +135,17 @@ body {
 }
 
 footer {
-    background-color: #1c1c1c;
-    color: #7d7d7d;
-    font-size: 0.9em;
-    padding-bottom: 20px;
+    background-color: #edeef3;
+    margin-top: 80px;
+    padding-top: 30px;
+    color: #457187;
+    padding-bottom: 50px;
+    text-align: center;
 }
 
 footer h2 {
-    font-size: 0.1.5em;   
+    font-size: 1.2em;  
+    font-weight: bold; 
     text-align: center;
 }
 
@@ -147,8 +161,31 @@ footer p {
     max-width: 150px;
 }
 
+#mentionsLegales {
+    width: 75%;
+    text-justify: justify;
+    font-size: 0.9em;
+}
+
 .titrePage {
     text-align: center;
+    color: #a60052;
+    margin-bottom: 50px;
+}
+
+.titreParagraphe {
+    text-align: center;
+    color: #a60052;
+    font-size: 1.8em;
+}
+
+p .description {
+    font-size: 1.8em;
+    text-justify: justify;
+}
+
+.pink {
+    color: #a60052;
 }
 
 #listeAdherents {
@@ -159,12 +196,12 @@ footer p {
 }
 
 .adherent {
-    width: 25%;
+    border: 1px solid #ececec;
+    width: 30%;
     padding: 30px;
     margin: auto;
     margin-bottom: 20px;
     margin-top: 20px;
-    background-color: #ececec;
 }
 
 .adherent h2 {
@@ -180,8 +217,34 @@ footer p {
     text-align: center;
 }
 
+#messageContact, #content, #sujetContact {
+    width: 100%;
+    border-radius: 5px;
+}
+#messageContact{
+    min-height: 400px;
+}
+
+#content {
+    min-height: 150px;
+}
+
+#sujetContact{
+    height: 30px;
+    border:1;
+}
+
+.submit {
+    background-color: #5897b6;
+    color: #ffffff;
+    padding: 2px;
+    font-weight: bold;
+    border-radius: 4px;
+}
+
 #forum table  {
     border-spacing: 7px;
+    width: 100%
 }
 
 #forum td {
@@ -197,17 +260,32 @@ footer p {
     width: 80%;
 }
 
+.colonneCategorie p{
+    margin-left: 20px;
+}
+
 .colonneNbTopics, .colonneDernierTopic {
     text-align: center;
 }
 
 #forum h2 {
-    margin: 0;
+    margin: 10px;
+    font-size: 1.5em;
+
+}
+
+#forum p {
+    font-size: 1.2em;
 }
 
 #forum h2 a{
     text-decoration: none;
-    color: #153159;
+    color: #a60052;
+
+}
+
+#forum .Topic {
+    width: 65%;
 }
 
 #forum h3 a{
