--- a/Contenu/CSS/style.css
+++ b/Contenu/CSS/style.css
@@ -12,8 +12,9 @@ body {
 
 #member{
     height: 40px;
-    background-color: #edeef3;
+    background-color: #2f2f2f;
     color: #ffffff;
+    font-weight: bold;
     text-align: right;
     padding-right: 30px;
     
@@ -112,6 +113,13 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
+  visibility: hidden;
+}
+
+
+.visible {
+    visibility: visible !important;
+
 }
 
 #logo {
@@ -234,7 +242,11 @@ p .description {
     color: #ffffff;
     padding: 2px;
     font-weight: bold;
-    border-radius: 4px;
+    border:0;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 #forum table  {
@@ -259,7 +271,7 @@ p .description {
     margin-left: 20px;
 }
 
-.colonneNbTopics, .colonneDernierTopic {
+.colonneNbTopics, .colonneDernierTopic, .NbTopic, .TopicDate {
     text-align: center;
 }
 
@@ -289,19 +301,44 @@ p .description {
     font-size: 0.9em;
 }
 
-.post, #ajoutPost {
-    background-color: #ececec;
-    border: 5px solid white;  
-    padding: 20px;
+#posts {
+    width: 100%;
+}
+#posts table{
+    width:100%;
 }
 
-.post table tr {
-    border: 5px solid white;    
-    margin: 10px;
+#posts table tr {
+    border: 20px solid #ffffff;
+}
+
+#posts table td {
+    background-color: #dedede;
+    border: 20px solid #ececec;
+
+}
+
+
+
+#posts table .messagePosted {
+    width: 75%;
+    padding:20px;
+}
+
+#ajoutPost {
+    background-color: #ececec;
+    padding: 30px;
+    margin-top: 20px;
 }
 
 .postedBy {
     text-align: center;
+    width: 25%;
+}
+
+#posts h2 {
+    font-weight: bold;
+    font-size: 1.2em;
 }
 
 .post h1, #ajoutPost h2 {
