--- a/Contenu/CSS/style.css
+++ b/Contenu/CSS/style.css
@@ -16,8 +16,11 @@ body {
     color: #ffffff;
     font-weight: bold;
     text-align: right;
-    padding-right: 30px;
-    
+    padding-top: 8px;
+}
+
+#member form input{
+    color:#2f2f2f;
 }
 
 #member p {
@@ -52,22 +55,19 @@ body {
 
 #menu li{
     display: inline-block;
-    
     list-style-type: none; 
 }
 
 #menu li:hover {
     background-color: #457187;
-    color: #ffffff;
 }
 
-.menuItem li:hover {
-    background-color: #457187;
-    color: #ffffff;
+#menu a:hover {
+    color: #ffffff !important;
 }
 
 #menu li a:hover {
-    color: #ffffff;
+    color: #ffffff !important;
 }
 
 #menu li a{
@@ -82,8 +82,6 @@ body {
     font-weight: bold;
 }
 
-
-
 .separator {
     margin-left: auto;
     margin-right: auto;
@@ -94,10 +92,17 @@ body {
 
 #slideshow {
     min-width: 450px;
+    height: 500px;
+    margin-bottom: 80px;
+}
+
+#slider{
+    height: 500px;
 }
 
 #slideContainer {
   position: relative;
+  height: 500px;
 }
 
 #slideContainer:before {
@@ -119,7 +124,19 @@ body {
 
 .visible {
     visibility: visible !important;
+    -webkit-animation: fadeinout 5s ease-in-out forwards;
+    animation: fadeinout 5s ease-in-out forwards;
 
+}
+
+@-webkit-keyframes fadeinout {
+    0%,100% { opacity: 0; }
+    50% { opacity: 1; }
+  }
+  
+@keyframes fadeinout {
+    0%,100% { opacity: 0; }
+    50% { opacity: 1; }
 }
 
 #logo {
@@ -217,6 +234,10 @@ p .description {
 }
 
 .adherent img {
+    text-align: center;
+}
+
+.adherent .img {
     text-align: center;
 }
 
