--- a/Contenu/CSS/style.css
+++ b/Contenu/CSS/style.css
@@ -210,7 +210,7 @@ p .description {
 
 #listeAdherents {
     display:flex;
-    flex-direction: vertical;
+    flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
 }
@@ -218,7 +218,9 @@ p .description {
 .adherent {
     border: 1px solid #ececec;
     width: 30%;
-    padding: 30px;
+    min-width: 240px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     margin: auto;
     margin-bottom: 20px;
     margin-top: 20px;
